--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -13,10 +13,15 @@
   "dependencies": {
     "axios": "latest",
     "body-parser": "^1.19.0",
-    "connect-history-api-fallback": "^1.6.0",
+    "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-rate-limit": "^5.2.6"
+    "express-rate-limit": "^5.2.6",
+    "express-validator": "^6.12.1",
+    "http-errors": "^1.7.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.12"
   }
 }
