--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,8 @@
     "express": "^4.17.1",
     "express-rate-limit": "^5.2.6",
     "express-validator": "^6.12.1",
-    "http-errors": "^1.7.2"
+    "http-errors": "^1.7.2",
+    "mongoose": "^5.13.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.12"
