--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -3,15 +3,8 @@ version: '3'
 services:
   app:
     build: .
-    volumes:
-      - .:/app
+    command: python3 api.py
     ports:
-      - "8000:8000"
-    links:
-      - redis:redis
-    depends_on:
-      - redis
-  redis:
-    image: "redis:alpine"
-    expose:
-      - "6379"
+      - "12000:12000"
+    volumes:
+      - .:/python-flask
