--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,16 +1,17 @@
 FROM node:10-alpine
 
-RUN mkdir -p /home/node/app/node_modules && chown -R node:node /home/node/app
+ADD . /node-app
+#RUN mkdir -p /home/node/app/node_modules && chown -R node:node /home/node/app
 
-WORKDIR /home/node/app
+WORKDIR /node-app
 
-COPY package*.json ./
+COPY package*.json ./node-app/
 
-USER node
+#USER node
 
 RUN npm install
 
-COPY --chown=node:node . .
+#COPY --chown=node:node . .
 
 EXPOSE 10000
 
