--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -4,6 +4,7 @@ ADD . /flask-app
 WORKDIR /flask-app
 RUN pip install -r requirements.txt
 
+EXPOSE 35000
 # CMD ["python3", "api.py"]
 # docker images
 # docker build -t nlp_app .
