--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,10 +9,8 @@ services:
     #restart: always
     container_name: py_bot
     command: python3 api.py
-    environment:
-      - EXPRESS_PORT=$EXPRESS_PORT
     ports:
-      - "12000:12000"
+      - "35000:35000"
     volumes:
       - ./api:/flask-app
     networks:
@@ -35,13 +33,13 @@ services:
       - MONGO_PORT=$MONGO_PORT
       - MONGO_DB=$MONGO_DB
     ports:
-      - "10000:10000"
+      - "30000:30000"
     volumes:
       - ./server:/node-app
       - ./server/node_modules:/node-app/node_modules
     networks:
       - app-network
-    command: ./wait-for.sh db:27017 -- node server.js
+    #command: ./wait-for.sh db:27017 -- node server.js
     depends_on:
       - py_bot
 
