--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,18 +1,24 @@
 FROM node:10-alpine
 
 ADD . /node-app
-#RUN mkdir -p /home/node/app/node_modules && chown -R node:node /home/node/app
-
 WORKDIR /node-app
 
-COPY package*.json ./node-app/
+COPY package*.json /node-app/
 
 #USER node
 
+RUN chmod +x ./wait-for.sh ./docker-entrypoint.sh
+RUN chmod +x /node-app/wait-for.sh /node-app/docker-entrypoint.sh
+# RUN ls -la .
+# RUN echo "-------"
+# RUN ls -la /node-app
+
 RUN npm install
+# RUN ls /node-app/node_modules
 
-#COPY --chown=node:node . .
+EXPOSE 30000
 
-EXPOSE 10000
-
+# Add this line
+# It _must_ use the JSON-array syntax
+# ENTRYPOINT ["docker-entrypoint.sh"]
 CMD [ "node", "server.js" ]
